
2009-06-04 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>

	* Significantly improved the multiplier version of gofCopula. 
	There are no more repeatability problems and the test is slightly 
	faster. Documentation updated.

	* Fixed various warning messages. 

2009-01-22 Jun Yan <jyan@stat.uconn.edu> and Ivan Kojadinovic <ivan@stat.auckland.ac.nz>

	* Fixed a bug in the random number generation for the 
	Husler-Reiss family.

	* Changed the default optimization method in fitCopula to 
	"Nelder-Mead". 

	* Added "optim.method" parameter to "gofCopula". 

	* The functions "fitCopula" and "gofCopula" should now work 
	for the Husler-Reiss and the Galambos families. The derivatives
	w.r.t. parameters and arguments are also implemented.

	* Added conditions in "fitCopula" so that the variance is not 
	estimated if the appropriate functions are not defined.

	* Switched order of argument "copula" and "data" in fitCopula 
	to be consistent with gofCopula.

	* Changed "UseMethod" to "setGeneric" for defining generic 
	functions.

	* Documention for "gofCopula" improved.

2008-11-18  Ivan Kojadinovic  <ivan@stat.auckland.ac.nz>

	* Jun has modified the structure of "fitCopula". Inversion 
	of Spearman's rho and Kendall's tau can now be used to estimate
	the dependence parameters. The large-sample standard errors of 
	the estimates can also be computed in almost all situations. 

	* The argument list of function "fitCopula" has changed from 
	the last version. A newly added "method" argument precedes 
	the "start" argument, because "start" may not be needed for 
	inverting Kendall's tau or Spearman's rho. The returned object 
	of "fitCopula" also has component "est" renamed to "estimate" 
	to be more informative.	

	* The function "gofCopula" has been modified to reflect the 
	changes in "fitCopula". The multiplier method has also been 
	improved. 

	* Warning messages from evaluating likelihood at invalid 