@@ -1,6 +1,6 @@
 Package: copula
-Version: 0.8-8
-Date: 2009-07-08
+Version: 0.8-9
+Date: 2009-07-23
 Title: Multivariate dependence with copulas
 Author: Jun Yan <jyan@stat.uconn.edu> and Ivan Kojadinovic
         <ivan@stat.auckland.ac.nz>.
@@ -28,8 +28,8 @@ Collate: Classes.R Copula.R derCdfPdf.R E.R amhCopula.R amhExpr.R
         gofEVTests.R gofTests.R graphics.R gumbelCopula.R gumbelExpr.R
         huslerReissCopula.R huslerReissExpr.R indepCopula.R
         indepTests.R logseries.R mvdc.R normalCopula.R plackettCopula.R
-        plackettExpr.R skewNormalCopula.R stable.R tCopula.R
-        tawnCopula.R tawnExpr.R tevCopula.R zzz.R
-Packaged: 2009-07-08 01:55:29 UTC; ivan
+        plackettExpr.R schlatherCopula.R skewNormalCopula.R stable.R
+        tCopula.R tawnCopula.R tawnExpr.R tevCopula.R zzz.R
+Packaged: 2009-07-23 14:35:09 UTC; jyan
 Repository: CRAN
-Date/Publication: 2009-07-18 15:40:39
+Date/Publication: 2009-07-24 06:06:13
