@@ -1,3 +1,7 @@
+2009-07-23 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>
+
+	* Fixed a bug in rcopula for frankCopula when dependence is negative.
+	* Default df for tCopula and tevCopula are set at 4.
 
 2009-06-04 Ivan Kojadinovic <ivan@stat.auckland.ac.nz> and Jun Yan <jyan@stat.uconn.edu>
 
